# chi-local-shows

./: .env.example  .gitignore  DEPLOY_PLAN.md  README.md  Taskfile.yml  about.html  ai-usage.html  app.py  band_lookup.py  browser.py  cache.py  db.py  export.py  fetch.py  index.html  models.py  pyproject.toml  requirements.txt  scoring.py  shows_cache.json  venues.json
.github/workflows/: fetch-and-publish.yml  main.yml  publish.yml
static/: app.js  logo_urls.json  style.css
tests/: conftest.py  test_band_lookup.py  test_cache.py  test_db.py  test_generic_scraper.py
venue_scrapers/: __init__.py  empty_bottle.py  generic.py
